WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122918
[cg] Fix the capitalization of kCGImageSourceSkipMetaData (-> Metadata)
https://bugs.webkit.org/show_bug.cgi?id=122918
Summary
[cg] Fix the capitalization of kCGImageSourceSkipMetaData (-> Metadata)
Tim Horton
Reported
2013-10-16 14:38:24 PDT
<
rdar://problem/15245016
>
Attachments
patch
(3.10 KB, patch)
2013-10-22 14:27 PDT
,
Tim Horton
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-10-22 14:27:29 PDT
Created
attachment 214883
[details]
patch
Tim Horton
Comment 2
2013-10-23 11:13:56 PDT
http://trac.webkit.org/changeset/157870
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug