[cg] Fix the capitalization of kCGImageSourceSkipMetaData (-> Metadata) https://bugs.webkit.org/show_bug.cgi?id=122918

Reviewed by Anders Carlsson.

* platform/graphics/cg/ImageSourceCG.cpp:
(WebCore::imageSourceOptions):
The capitalization of kCGImageSourceSkipMetaData changed to
kCGImageSourceSkipMetadata in Mountain Lion.


Canonical link: https://commits.webkit.org/141313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157870 268f45cc-cd09-0410-ab3c-d52691b4dbfc